# alasia

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  LICENSE  README.md  build.sh  config.example.json
.qwen/: settings.json  settings.json.orig
src/: cache.cpp  cache.hpp  config.cpp  config.hpp  curl_pool.cpp  curl_pool.hpp  http_client.cpp  http_client.hpp  ip_getter.cpp  ip_getter.hpp  ip_getter_bsd.cpp  ip_getter_freebsd.cpp  log.cpp  log.hpp  main.cpp  main_v2.cpp
src/commands/: command_handler.hpp  run_command.cpp
src/config/: config.cpp  config.hpp
src/core/: logger.hpp  result.hpp  types.hpp
src/http/: http_client.cpp  http_client.hpp
src/provider/: aliyun.cpp  aliyun.hpp  cloudflare.cpp  cloudflare.hpp  provider.hpp
src/services/cache/: cache_service.cpp  cache_service.hpp
src/services/dns/: aliyun_provider.cpp  aliyun_provider.hpp  cloudflare_provider.cpp  cloudflare_provider.hpp  dns_factory.cpp  dns_factory.hpp  dns_provider.hpp
src/services/ip/: ip_service.cpp  ip_service.hpp
